--- a/CodecoolMaterialAPI/Views/_ViewImports.cshtml
+++ b/CodecoolMaterialAPI/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using CodecoolMaterialAPI
-@using CodecoolMaterialAPI.Models
+@using CodecoolMaterialAPI.DAL.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
